src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__keywords__good_keywords-2.snap
---
source: src/tests/krate/publish/keywords.rs
expression: response.json()
---
{
  "crate": {
    "badges": [],
    "categories": null,
    "created_at": "[datetime]",
    "default_version": "1.0.0",
    "description": "description",
    "documentation": null,
    "downloads": 0,
    "exact_match": false,
    "homepage": null,
    "id": "foo_good_key",
    "keywords": null,
    "links": {
      "owner_team": "/api/v1/crates/foo_good_key/owner_team",
      "owner_user": "/api/v1/crates/foo_good_key/owner_user",
      "owners": "/api/v1/crates/foo_good_key/owners",
      "reverse_dependencies": "/api/v1/crates/foo_good_key/reverse_dependencies",
      "version_downloads": "/api/v1/crates/foo_good_key/downloads",
      "versions": "/api/v1/crates/foo_good_key/versions"
    },
    "max_stable_version": "1.0.0",
    "max_version": "1.0.0",
    "name": "foo_good_key",
    "newest_version": "1.0.0",
    "num_versions": 1,
    "recent_downloads": null,
    "repository": null,
    "updated_at": "[datetime]",
    "versions": null,
    "yanked": false
  },
  "warnings": {
    "invalid_badges": [],
    "invalid_categories": [],
    "other": []
  }
}
